--- a/part3/phonebook-backend/package.json
+++ b/part3/phonebook-backend/package.json
@@ -16,7 +16,9 @@
     "nodemon": "^3.1.7"
   },
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "mongoose": "^8.8.3",
     "morgan": "^1.10.0"
   }
 }
